--- a/async_await.html
+++ b/async_await.html
@@ -106,7 +106,7 @@
             this.pokemomSprite = document.createElement('img');
             this.pokemonName = document.createElement('p');
 
-            this.pokemon.className = 'pokemon';
+            this.pokemon.className = 'pokemon'; // se delara el atributo this.className para darle estilos con CSS
             this.pokemonName.textContent = pokemon.name;
 
             this.pokemomSprite.setAttribute('crossOrigin', 'anonymous');
